# tests/characterization/openapi_reference.json
@@ -1825,74 +1825,6 @@
         }
       }
     },
-    "/invoices/export": {
-      "get": {
-        "tags": [
-          "invoices"
-        ],
-        "summary": "Export Invoices Zip",
-        "operationId": "export_invoices_zip_invoices_export_get",
-        "security": [
-          {
-            "OAuth2PasswordBearer": []
-          }
-        ],
-        "parameters": [
-          {
-            "name": "date_from",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Date From"
-            }
-          },
-          {
-            "name": "date_to",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Date To"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/invoices/{invoice_id}": {
       "get": {
         "tags": [
@@ -2110,16 +2042,6 @@
             "schema": {
               "type": "integer",
               "title": "Invoice Id"
-            }
-          },
-          {
-            "name": "format",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "string",
-              "default": "ticket",
-              "title": "Format"
             }
           }
         ],
